--- a/scripts/MonkeyDials/MonkeyDials.glade
+++ b/scripts/MonkeyDials/MonkeyDials.glade
@@ -3,7 +3,6 @@
   <requires lib="gtk+" version="2.16"/>
   <!-- interface-naming-policy project-wide -->
   <object class="GtkWindow" id="winMain">
-    <property name="height_request">200</property>
     <property name="resizable">False</property>
     <signal name="destroy" handler="onWinMainDestroy"/>
     <child>
@@ -123,12 +122,13 @@
                 </child>
                 <child>
                   <object class="GtkHScale" id="scaleLinearSpeed">
-                    <property name="width_request">100</property>
+                    <property name="width_request">200</property>
                     <property name="height_request">40</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="events">GDK_BUTTON1_MOTION_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_STRUCTURE_MASK</property>
                     <property name="no_show_all">True</property>
+                    <property name="adjustment">adjustment1</property>
                     <property name="show_fill_level">True</property>
                     <signal name="button_press_event" handler="onLinearSpeedControlButtonPressEvent"/>
                     <signal name="move_slider" handler="onScaleLinearSpeedMoveSlider"/>
@@ -159,10 +159,11 @@
                 </child>
                 <child>
                   <object class="GtkHScale" id="scaleAngularSpeed">
-                    <property name="width_request">100</property>
+                    <property name="width_request">200</property>
                     <property name="height_request">40</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="adjustment">adjustment2</property>
                     <property name="show_fill_level">True</property>
                     <signal name="button_press_event" handler="onAngSpeedControlButtonPressEvent"/>
                     <signal name="button_release_event" handler="onAngSpeedControlButtonReleaseEvent"/>
@@ -192,10 +193,11 @@
                 </child>
                 <child>
                   <object class="GtkHScale" id="scaleDepthSpeed">
-                    <property name="width_request">100</property>
+                    <property name="width_request">200</property>
                     <property name="height_request">40</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="adjustment">adjustment3</property>
                     <property name="show_fill_level">True</property>
                     <signal name="button_press_event" handler="onDepthSpeedControlButtonPressEvent"/>
                     <signal name="button_release_event" handler="onDepthSpeedControlButtonReleaseEvent"/>
@@ -210,6 +212,35 @@
                 <property name="position">5</property>
               </packing>
             </child>
+            <child>
+              <object class="GtkHBox" id="displayCompassYawAngle">
+                <property name="visible">True</property>
+                <child>
+                  <object class="GtkLabel" id="lblCompassAngleName">
+                    <property name="visible">True</property>
+                    <property name="xalign">0.98000001907348633</property>
+                    <property name="label" translatable="yes">Compass Yaw Angle:</property>
+                  </object>
+                  <packing>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkLabel" id="lblCompassAngle">
+                    <property name="visible">True</property>
+                    <property name="xpad">5</property>
+                    <property name="label" translatable="yes">0.0</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="position">1</property>
+                  </packing>
+                </child>
+              </object>
+              <packing>
+                <property name="position">7</property>
+              </packing>
+            </child>
           </object>
           <packing>
             <property name="position">0</property>
@@ -217,5 +248,22 @@
         </child>
       </object>
     </child>
+  </object>
+  <object class="GtkAdjustment" id="adjustment1">
+    <property name="lower">-20</property>
+    <property name="upper">20</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">1</property>
+  </object>
+  <object class="GtkAdjustment" id="adjustment2">
+    <property name="lower">-20</property>
+    <property name="upper">20</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">1</property>
+  </object>
+  <object class="GtkAdjustment" id="adjustment3">
+    <property name="upper">5</property>
+    <property name="step_increment">0.10000000000000001</property>
+    <property name="page_increment">1</property>
   </object>
 </interface>
