--- a/scripts/MonkeyDials/MonkeyDials.glade
+++ b/scripts/MonkeyDials/MonkeyDials.glade
@@ -29,7 +29,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="invisible_char">&#x2022;</property>
-                    <property name="adjustment">adjustment4</property>
+                    <property name="adjustment">adjMaxLinSpeed</property>
                     <property name="digits">2</property>
                     <property name="numeric">True</property>
                   </object>
@@ -62,7 +62,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="invisible_char">&#x2022;</property>
-                    <property name="adjustment">adjustment5</property>
+                    <property name="adjustment">adjAngLinSpeed</property>
                     <property name="digits">2</property>
                     <property name="numeric">True</property>
                   </object>
@@ -95,7 +95,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="invisible_char">&#x25CF;</property>
-                    <property name="adjustment">adjustment6</property>
+                    <property name="adjustment">adjDepthLinSpeed</property>
                     <property name="digits">2</property>
                     <property name="numeric">True</property>
                   </object>
@@ -131,7 +131,7 @@
                     <property name="can_focus">True</property>
                     <property name="events">GDK_BUTTON1_MOTION_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_STRUCTURE_MASK</property>
                     <property name="no_show_all">True</property>
-                    <property name="adjustment">adjustment1</property>
+                    <property name="adjustment">adjLinSpeed</property>
                     <property name="show_fill_level">True</property>
                     <signal name="value_changed" handler="onScaleLinearSpeedValueChanged"/>
                   </object>
@@ -143,39 +143,6 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="position">3</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkHBox" id="displayAngularSpeed">
-                <property name="visible">True</property>
-                <property name="homogeneous">True</property>
-                <child>
-                  <object class="GtkLabel" id="lblAngularSpeedName">
-                    <property name="visible">True</property>
-                    <property name="label" translatable="yes">Angular Speed (%):</property>
-                  </object>
-                  <packing>
-                    <property name="position">0</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkHScale" id="scaleAngularSpeed">
-                    <property name="width_request">200</property>
-                    <property name="height_request">40</property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="adjustment">adjustment2</property>
-                    <property name="show_fill_level">True</property>
-                    <signal name="value_changed" handler="onScaleAngularSpeedValueChanged"/>
-                  </object>
-                  <packing>
-                    <property name="position">1</property>
-                  </packing>
-                </child>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="position">4</property>
               </packing>
             </child>
             <child>
@@ -197,7 +164,7 @@
                     <property name="height_request">40</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="adjustment">adjustment3</property>
+                    <property name="adjustment">adjDepthSpeed</property>
                     <property name="show_fill_level">True</property>
                     <signal name="value_changed" handler="onScaleDepthSpeedValueChanged"/>
                   </object>
@@ -208,7 +175,73 @@
               </object>
               <packing>
                 <property name="expand">False</property>
+                <property name="position">4</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkHBox" id="displayAngularSpeed">
+                <property name="visible">True</property>
+                <property name="homogeneous">True</property>
+                <child>
+                  <object class="GtkLabel" id="lblAngularSpeedName">
+                    <property name="visible">True</property>
+                    <property name="label" translatable="yes">Angular Speed (%):</property>
+                  </object>
+                  <packing>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkHScale" id="scaleAngularSpeed">
+                    <property name="width_request">200</property>
+                    <property name="height_request">40</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="adjustment">adjAngSpeed</property>
+                    <property name="show_fill_level">True</property>
+                    <signal name="value_changed" handler="onScaleAngularSpeedValueChanged"/>
+                  </object>
+                  <packing>
+                    <property name="position">1</property>
+                  </packing>
+                </child>
+              </object>
+              <packing>
+                <property name="expand">False</property>
                 <property name="position">5</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkHBox" id="displayMaxDepthSpeed1">
+                <property name="visible">True</property>
+                <child>
+                  <object class="GtkLabel" id="lblDesiredYawAngleName">
+                    <property name="visible">True</property>
+                    <property name="xalign">0.98000001907348633</property>
+                    <property name="label" translatable="yes">Desired Yaw Angle (deg):</property>
+                  </object>
+                  <packing>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkSpinButton" id="spinDesiredYawAngle">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="invisible_char">&#x25CF;</property>
+                    <property name="adjustment">adjDesYawAngle</property>
+                    <property name="digits">2</property>
+                    <property name="numeric">True</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="position">1</property>
+                  </packing>
+                </child>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="position">6</property>
               </packing>
             </child>
             <child>
@@ -249,39 +282,46 @@
       </object>
     </child>
   </object>
-  <object class="GtkAdjustment" id="adjustment1">
+  <object class="GtkAdjustment" id="adjLinSpeed">
     <property name="lower">-100</property>
     <property name="upper">100</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
-  <object class="GtkAdjustment" id="adjustment2">
+  <object class="GtkAdjustment" id="adjAngSpeed">
     <property name="lower">-100</property>
     <property name="upper">100</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
-  <object class="GtkAdjustment" id="adjustment3">
+  <object class="GtkAdjustment" id="adjDepthSpeed">
     <property name="upper">100</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
-  <object class="GtkAdjustment" id="adjustment4">
+  <object class="GtkAdjustment" id="adjMaxLinSpeed">
     <property name="value">2.0000000002235172</property>
     <property name="upper">5</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
-  <object class="GtkAdjustment" id="adjustment5">
+  <object class="GtkAdjustment" id="adjAngLinSpeed">
     <property name="value">30</property>
     <property name="upper">30</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
-  <object class="GtkAdjustment" id="adjustment6">
+  <object class="GtkAdjustment" id="adjDepthLinSpeed">
     <property name="value">2.0000000002235172</property>
     <property name="upper">5</property>
     <property name="step_increment">0.5</property>
     <property name="page_increment">10</property>
+  </object>
+  <object class="GtkAdjustment" id="adjDesYawAngle">
+    <property name="lower">-360</property>
+    <property name="upper">360</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+    <property name="page_size">10</property>
   </object>
 </interface>
