--- a/scripts/MonkeyDials/MonkeyDials.glade
+++ b/scripts/MonkeyDials/MonkeyDials.glade
@@ -322,6 +322,7 @@
                     <property name="adjustment">adjDesDepth</property>
                     <property name="digits">2</property>
                     <property name="numeric">True</property>
+                    <property name="update_policy">if-valid</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -462,6 +463,7 @@
     <property name="page_increment">10</property>
   </object>
   <object class="GtkAdjustment" id="adjDesDepth">
+    <property name="value">1</property>
     <property name="upper">8</property>
     <property name="step_increment">0.10000000000000001</property>
     <property name="page_increment">10</property>
