--- a/scripts/SubMotorControl/SubMotorControl.glade
+++ b/scripts/SubMotorControl/SubMotorControl.glade
@@ -39,6 +39,18 @@
                 <property name="position">1</property>
               </packing>
             </child>
+            <child>
+              <object class="GtkButton" id="btnResetVerticalMotors">
+                <property name="label" translatable="yes">Reset Vertical Motors</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <signal name="clicked" handler="onBtnResetVerticalMotorsClicked"/>
+              </object>
+              <packing>
+                <property name="position">2</property>
+              </packing>
+            </child>
           </object>
           <packing>
             <property name="position">0</property>
